# labs

./: .gitignore  pyproject.toml
data-mining/: 1_numpy.ipynb  2_pandas.ipynb  3_pandas.ipynb  4_matplotlib.ipynb  5_matplotlib.ipynb  6_nltk.ipynb
data-mining/.ipynb_checkpoints/: 1_numpy-checkpoint.ipynb  2_pandas-checkpoint.ipynb
