[project]
name = "labs"
version = "0.1.0"
description = ""
authors = [
    {name = "pavel",email = "mpavel@duck.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
jupyter = "^1.1.1"
numpy = "^2.3.3"
pandas = "^2.3.3"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "black[jupyter] (>=25.9.0,<26.0.0)"
]
