[project]
name = "labs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
